WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83393
[GTK] Accelerated compositing is broken after recent TextureMapper reorganizations
https://bugs.webkit.org/show_bug.cgi?id=83393
Summary
[GTK] Accelerated compositing is broken after recent TextureMapper reorganiza...
Martin Robinson
Reported
2012-04-06 14:38:27 PDT
After some recent TextureMapper reorganizations, accelerated compositing via the TextureMapper is broken on GTK+.
Attachments
Patch
(3.99 KB, patch)
2012-04-06 15:24 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2012-04-06 15:09:51 PDT
Sorry about that, let me know how I can help... Since texture-mapper is not enabled in the bots it's hard to notice breakages.
Martin Robinson
Comment 2
2012-04-06 15:21:14 PDT
(In reply to
comment #1
)
> Sorry about that, let me know how I can help... Since texture-mapper is not enabled in the bots it's hard to notice breakages.
Not a problem! Our AC implementation is still pretty young. I hope to give it a lot more care in the coming months.
Martin Robinson
Comment 3
2012-04-06 15:24:22 PDT
Created
attachment 136072
[details]
Patch
Martin Robinson
Comment 4
2012-04-06 15:35:39 PDT
Comment on
attachment 136072
[details]
Patch Thanks for the review!
WebKit Review Bot
Comment 5
2012-04-06 18:26:07 PDT
Comment on
attachment 136072
[details]
Patch Clearing flags on attachment: 136072 Committed
r113533
: <
http://trac.webkit.org/changeset/113533
>
WebKit Review Bot
Comment 6
2012-04-06 18:26:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug