[GTK] Accelerated compositing is broken after recent TextureMapper reorganizations https://bugs.webkit.org/show_bug.cgi?id=83393

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-04-06
Reviewed by Noam Rosenthal.

Source/WebCore:

No new tests. This will be covered by existing accelerated compositing tests
once the implementation is complete.

The GTK+ implementation doesn't clip currently, so hold off enabling the
scissor test until necessary.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::beginPainting): Do not enable the scissor test.
(WebCore::TextureMapperGL::beginScissorClip): Enable the scissor test once
we know for sure we will be using scissored clipping.

Source/WebKit/gtk:

Ensure that the layer tree is synced when the root layer is resized.

* WebCoreSupport/AcceleratedCompositingContextGL.cpp:
(WebKit::AcceleratedCompositingContext::resizeRootLayer): Ensure that the layer
tree is synced when the root layer resizes and remove a call to recomposite
the tree, as it happens anyway.

Canonical link: https://commits.webkit.org/100857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113533 268f45cc-cd09-0410-ab3c-d52691b4dbfc